traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:16: error: type mismatch;
 found   : Int
 required: Byte
    x += direction;
      ^TraversalZigZag:19: error: type mismatch;
 found   : Int
 required: Byte
      y += 1;
        ^TraversalZigZag:23: error: ambiguous reference to overloaded definition,
both method + in class Byte of type (x: Char)Int
and  method + in class Byte of type (x: Byte)Int
match expected type ?
      y + = 1;
        ^TraversalZigZag:24: error: type mismatch;
 found   : Int
 required: Byte
      x = w - 1;
            ^